2000-06-29  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-ctype.c (ctype_output): Don't generate unaligned
	data files.

2000-06-29  Greg McGary  <greg@mcgary.org>

	* sysdeps/i386/bp-asm.h (PCOFF): New constant.
	(POP_ERRNO_LOCATION_RETURN): Fold insns.
	* sysdeps/i386/bits/setjmp.h (JB_SIZE): New constant.
	(PUSH_SIGNAL_MASK): New macro.
	* sysdeps/i386/__longjmp.S (__longjmp): Wrap symbol in BP_SYM ().
	LEAVE is unnecessary.  Check bounds of jmp_buf.
	* sysdeps/i386/elf/setjmp.S: Call PUSH_SIGNAL_MASK.  Wrap symbols
	in BP_SYM ().  Check bounds of jmp_buf.  Don't call LEAVE until
	immediately before tail-call.
	* sysdeps/i386/setjmp.S: Likewise.
	* sysdeps/i386/bsd-_setjmp.S: Likewise.
	* sysdeps/i386/bsd-setjmp.S: Likewise.

2000-06-29  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/fpu/fclrexcpt.c: Use SHLIB_COMPAT, compat_symbol and
	versioned_symbol.
	* sysdeps/sparc/fpu/fesetenv.c: Likewise.
	* sysdeps/sparc/fpu/feupdateenv.c: Likewise.
	* sysdeps/sparc/fpu/fgetexcptflg.c: Likewise.
	* sysdeps/sparc/fpu/fraiseexcpt.c: Likewise.
	* sysdeps/sparc/fpu/fsetexcptflg.c: Likewise.
	* sysdeps/sparc/fpu/fegetenv.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/Versions: New file.
	* shlib-versions: Make sparc64 GLIBC_2.2+ only.

2000-06-29  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/printf_fp.c (__printf_fp): Don't clobber pointer which
	we later need to calling free().
	Patch by Matt Wilson <msw@redhat.com>.

	* stdio-common/tst-printf.c: Add test for above problem.

2000-06-27  David Mosberger-Tang  <davidm@hpl.hp.com>

	* sysdeps/unix/sysv/linux/ia64/bits/ipc.h: New file.
	* sysdeps/unix/sysv/linux/ia64/bits/shm.h: New file.

2000-06-28  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/ieee754/dbl-64/s_exp2.c: Add include stdlib.h to get
	prototype for abs().
	* sysdeps/ieee754/flt-32/s_exp2f.c: ditto.

2000-06-23  Andreas Jaeger  <aj@suse.de>

	* config.h.in: Don't use regparm with bounded pointers.
