@@ -27,7 +27,7 @@ extern void __libc_init_first (int argc, char **argv, char **envp);
 extern int _dl_starting_up;
 weak_extern (_dl_starting_up)
 extern int __libc_multiple_libcs;
-extern void *__unbounded __libc_stack_end;
+extern void *__libc_stack_end;
 
 /* Prototype for local function.  */
 extern void __libc_check_standard_fds (void);
