@@ -59,6 +59,9 @@ eval `{ echo "#include <sysdep.h>";
   ?:????) nargs=4;;
   ?:?????) nargs=5;;
   ?:??????) nargs=6;;
+  ?:???????) nargs=7;;
+  ?:????????) nargs=8;;
+  ?:?????????) nargs=9;;
   esac
 
   # Make sure only the first syscall rule is used, if multiple dirs
